# GUST

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_PLAN.md  PROJECT_STRUCTURE.md  README.md  TODO.md  appsettings.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: default_config.yaml
data/: .gitkeep
docs/: README.md  architecture.md  getting_started.md
engines/: enginelist.csv  load_engine.py
examples/: basic_usage.py
neural_network/: config.py  load_model.py  model.py  neural_network.py  serialize.py
neural_network/features/: __init__.py  feature_block.py  feature_set.py  halfkp.py
scripts/: lint.sh  run_tests.sh  setup_environment.sh
source/gust/: main.py
src/gust/: __init__.py  __main__.py
src/gust/api/: __init__.py
src/gust/evaluator/: __init__.py
src/gust/genetic/: __init__.py
src/gust/gui/: __init__.py
src/gust/trainer/: __init__.py
src/gust/utils/: __init__.py
tests/: __init__.py  main.py  test_main.py
tests/integration/: __init__.py
tournaments/: tournament.py
